--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <img src="game-logo.png" />
+      <img src="New-Logo.png" />
       <h1>Tic-Tac-Toe</h1>
     </header>
     <div id="root"></div>
